--- a/doc/presentation/main.tex
+++ b/doc/presentation/main.tex
@@ -419,6 +419,7 @@ than $0.15$.}
 \end{figure}
 \end{frame}
 
+\section{Conclusion}
 \begin{frame}{Factors Affecting Convergence}
     \begin{itemize}
         \item Weighting function
@@ -443,14 +444,13 @@ than $0.15$.}
     \end{itemize}
 \end{frame}
 
-\section{Conclusion}
 \begin{frame}{Conclusion}
 \begin{itemize}
     \item Summary:
     \begin{itemize}
     \item BOLD Parameters Ill-Defined
     \item Particle Filter Capable of good parameter BOLD estimate with 1000 particles
-    \item Mutual Information offers good Estimate of Quality
+    \item Mutual Information performs well as estimate of Quality
     \end{itemize}
     \item Future Works
     \begin{itemize}
@@ -463,6 +463,9 @@ than $0.15$.}
 
     \end{itemize}
 \end{itemize}
+\end{frame}
+
+\begin{frame}{Questions?}
 \end{frame}
 
 %% All of the following is optional and typically not needed. 
