needs fixes....but whateve

--- a/doc/presentation/main.tex
+++ b/doc/presentation/main.tex
@@ -71,7 +71,6 @@ using Particle Filters}
 \end{frame}
 
 \section{Introduction}
-%2
 \begin{frame}{Balloon Model}
 \begin{figure}
 \includegraphics[width=10cm]{model}
@@ -89,13 +88,12 @@ using Particle Filters}
         which are a function of Volume and Oxygenation.}
 \end{frame}
 
-%4
 \begin{frame}{Time Changing Parameters}
     \includegraphics[clip=true,trim=3cm 1cm 3cm 1cm,width=\textwidth]{stateTS}
     \note{Should include a picture of the different parts of the BOLD signal}
 \end{frame}
 
-%6 
+%more expansion of all the parameters
 \begin{frame}{BOLD State Equations}
   \small
   \begin{itemize}
